export interface IStats {
    goals: number;
    assists: number;
    passes: number;
};