export interface IPosition {
    name: string;
    role: string;
};