// Flyweight Interfaces
export interface Flyweight {
    display(extrinsicState: any): void;
}
