export interface ITeam {
    name: string;
    coach: string;
};